@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-01-27T08:16:04Z",
-  "count_outdated" : 1022,
-  "uniques_outdated" : 596,
+  "timestamp" : "2024-01-27T16:15:38Z",
+  "count_outdated" : 1023,
+  "uniques_outdated" : 597,
   "count" : 1044,
   "uniques" : 609,
   "clones" : [
-    {
-      "timestamp": "2024-01-13T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-01-17T00:00:00Z",
       "count": 1,
