@@ -1,12 +1,7 @@
 {
-  "count": 22,
-  "uniques": 3,
+  "count": 21,
+  "uniques": 2,
   "clones": [
-    {
-      "timestamp": "2024-01-13T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-01-17T00:00:00Z",
       "count": 1,
