@@ -1,3 +1,12 @@
+2024-01-27T16:15:38Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7679763211 # 62
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-27
+* notice: last 14d: unq all: 2 21
+* notice: prev accum: outdated-unq outdated-all / unq all: 596 1022 / 609 1044
+* notice: next accum: outdated-unq outdated-all / unq all: 597 1023 / 609 1044
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2024-01-13] / []
+
 2024-01-27T08:16:04Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7677404044 # 61
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-27
